<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_address"/>

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_kons_time" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_email" />

    </LinearLayout>
<!--
    <LinearLayout
        android:id="@+id/lUserInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
-->

</LinearLayout>